# job-hunt

./: .gitignore  README.md  the-philosophy-of-job-hunting.md
.cursor/rules/: backend.mdc  core.mdc  cursor-rules.mdc  documentation.mdc  folder-structure.mdc  frontend.mdc  prd.mdc  tasks.mdc  tech-stack.mdc
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8b367832b1d9_create_initial_tables.py
backend/app/: config.py  main.py
backend/app/db/: database.py
backend/app/models/: __init__.py  application_event.py  company.py  enums.py  job_application.py  job_source.py
backend/app/routers/: __init__.py  companies.py  job_applications.py  job_sources.py
backend/app/schemas/: __init__.py  application_event.py  company.py  job_application.py  job_source.py
backend/app/services/: __init__.py  company_service.py  job_application_service.py  job_source_service.py
backend/tests/: conftest.py  test_companies.py  test_job_applications.py  test_job_sources.py  test_main.py
docs/: PRD.md  README.md  folder-structure.md  tasks.md  tech-stack.md  website-navigation-and-pages.md
docs/adr/: ADR-001-database-choice.md
docs/api/: README.md  companies-api.md  companies_api.md  job-applications-api.md  job-sources-api.md  job_applications_api.md  job_sources_api.md
docs/data-models/: README.md  company-model.md  (+3 more)
frontend/: package-lock.json  package.json
tools/: README.md  pyproject.toml
tools/get-companies/: README.md  get_companies.py  sources.json
tools/get-job-keywords/: README.md  sheet_processor.py
(+45 files in other folders)
