[project]
name = "job-hunt"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "ollama (>=0.4.7,<0.5.0)",
    "google-api-python-client >= 2.133.0, < 3.0.0",
    "google-auth-httplib2 >= 0.2.0, < 1.0.0",
    "google-auth-oauthlib >= 1.2.0, < 2.0.0",
    "matplotlib >= 3.8.4, < 4.0.0",
    "pandas >= 2.2.2, < 3.0.0",
    "plotly >= 5.22.0, < 6.0.0",
    "psutil >= 5.9.8, < 6.0.0",
    "requests >= 2.32.3, < 3.0.0",
    "beautifulsoup4 >= 4.12.3, < 5.0.0",
    "lxml >= 5.2.2, < 6.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
